--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-heatmap": "^1.0.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^19.0.0",
+    "react-gauge-chart": "^0.5.1",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -34,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "9",
+    "postcss": "7",
+    "tailwindcss": "^4.0.0"
   }
 }
