--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "leaflet-heatmap": "^1.0.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-canvas-gauges": "^1.2.1",
     "react-chartjs-2": "^5.3.0",
-    "react-circular-progressbar": "^2.1.0",
+    "react-circular-progressbar": "^2.2.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
     "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.4.0",
